<resources>
    <string name="app_name">Natsco Addressing Tool</string>
    <string name="action_settings">Settings</string>
    <string name="smk_image">An Image of a smoke detector</string>
    <string name="mini_image">An Image of a mini monitor module</string>
    <string name="monitor_image">An Image of a monitor module</string>
    <string name="ctrl_image">An Image of a D900 Control IO</string>
    <string name="ctrlav_image">An Image of a D900 Control AV</string>
    <string name="din_image">An Image of a Mini Din</string>
    <string name="a8s_image">An Image of an A8S Board</string>
    <string name="rps_image">An Image of an RPS Board</string>
    <string name="back">Back</string>
    <string name="ctrl">D900 Control IO</string>
    <string name="mini">Mini Monitor Module \n(Priority and Non Priority)</string>
    <string name="smk">Smoke Detector</string>
    <string name="monitor">Monitor Module</string>
    <string name="ctrlav">D900 Control AV</string>
    <string name="din">Mini DIN</string>
    <string name="a8s">A8S Board</string>
    <string name="rps">RPS Board</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="sixteen">16</string>
    <string name="thirtytwo">32</string>
    <string name="sixtyfour">64</string>
    <string name="b">B</string>
    <string name="classa">Class A</string>
    <string name="classb">Class B</string>
    <string name="on">ON</string>
    <string name="x">X</string>
    <string name="vertical10">0\n \n \n\n1</string>
    <string name="horiz10">\t 1 \t \t \t 0</string>
    <string name="horiz10flip">\t \t 0 \t \t \t 1</string>
    <string name="switchimg">An Image of a switch</string>
    <string name="arrowimg">An image of an arrow</string>
    <string name="autofill">0</string>
    <string name="copyright">\u00A9 2020 National Time and Signal</string>
    <string name="code0">SG-C* pattern</string>
    <string name="code1">steady ON/OFF pattern</string>
    <string name="code2">code 3 pattern</string>
    <string name="code3">march time pattern</string>
    <string name="code4">can be individually controlled</string>
    <string name="code5">can not be individually controlled</string>
    <string name="arrow">Converts \nthis way\n </string>
    <string name="explanation">SG-C* pattern means .... \n Steady ON/OFF pattern is ... \n Code 3 pattern means that ... \n March Time pattern implies that ...</string>
</resources>
