<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DinActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:id="@+id/image"
            android:src="@drawable/din"
            android:contentDescription="@string/din_image"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="#000000"
            android:padding="5dp"
            android:id="@+id/switchholder"
            android:layout_below="@id/image">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_marginStart="20dp"
                android:id="@+id/on"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:text="@string/x"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textScaleX="3"/>


            <ImageButton
                android:layout_width="@dimen/switchwidth"
                android:layout_height="@dimen/switchheight"
                android:layout_margin="@dimen/switchmargin"
                android:src="@drawable/switchverticaloffw"
                android:layout_below="@id/on"
                android:contentDescription="@string/switchimg"
                android:id="@+id/s0"/>
            <ImageButton
                android:layout_width="@dimen/switchwidth"
                android:layout_height="@dimen/switchheight"
                android:layout_margin="@dimen/switchmargin"
                android:src="@drawable/switchverticaloffw"
                android:layout_below="@id/on"
                android:contentDescription="@string/switchimg"
                android:layout_toEndOf="@id/s0"
                android:id="@+id/s1"/>
            <ImageButton
                android:layout_width="@dimen/switchwidth"
                android:layout_height="@dimen/switchheight"
                android:layout_margin="@dimen/switchmargin"
                android:src="@drawable/switchverticaloffw"
                android:contentDescription="@string/switchimg"
                android:layout_below="@id/on"
                android:layout_toEndOf="@id/s1"
                android:id="@+id/s2"/>
            <ImageButton
                android:layout_width="@dimen/switchwidth"
                android:layout_height="@dimen/switchheight"
                android:layout_margin="@dimen/switchmargin"
                android:src="@drawable/switchverticaloffw"
                android:contentDescription="@string/switchimg"
                android:layout_below="@id/on"
                android:layout_toEndOf="@id/s2"
                android:id="@+id/s3"/>
            <ImageButton
                android:layout_width="@dimen/switchwidth"
                android:layout_height="@dimen/switchheight"
                android:layout_margin="@dimen/switchmargin"
                android:src="@drawable/switchverticaloffw"
                android:contentDescription="@string/switchimg"
                android:layout_below="@id/on"
                android:layout_toEndOf="@id/s3"
                android:id="@+id/s4"/>
            <ImageButton
                android:layout_width="@dimen/switchwidth"
                android:layout_height="@dimen/switchheight"
                android:layout_margin="@dimen/switchmargin"
                android:src="@drawable/switchverticaloffw"
                android:contentDescription="@string/switchimg"
                android:layout_below="@id/on"
                android:layout_toEndOf="@id/s4"
                android:id="@+id/s5"/>
            <ImageButton
                android:layout_width="@dimen/switchwidth"
                android:layout_height="@dimen/switchheight"
                android:layout_margin="@dimen/switchmargin"
                android:src="@drawable/switchverticaloffw"
                android:contentDescription="@string/switchimg"
                android:layout_below="@id/on"
                android:layout_toEndOf="@id/s5"
                android:id="@+id/s6"/>
            <ImageButton
                android:layout_width="@dimen/switchwidth"
                android:layout_height="@dimen/switchheight"
                android:layout_margin="@dimen/switchmargin"
                android:src="@drawable/switchverticaloffw"
                android:contentDescription="@string/switchimg"
                android:layout_below="@id/on"
                android:layout_toEndOf="@id/s6"
                android:id="@+id/s7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_below="@id/s1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_alignStart="@id/s0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_below="@id/s1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_alignStart="@id/s1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_below="@id/s1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_alignStart="@id/s2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_below="@id/s1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_alignStart="@id/s3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_below="@id/s1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_alignStart="@id/s4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_below="@id/s1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_alignStart="@id/s5"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_below="@id/s1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_alignStart="@id/s6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_below="@id/s1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_alignStart="@id/s7"/>

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_below="@id/switchholder"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/netron"
            android:id="@+id/l1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_below="@id/switchholder"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/l1"
            android:fontFamily="@font/netron"
            android:id="@+id/l2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_below="@id/switchholder"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="22dp"
            android:layout_toEndOf="@id/l2"
            android:fontFamily="@font/netron"
            android:id="@+id/l3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_below="@id/switchholder"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@id/l3"
            android:fontFamily="@font/netron"
            android:id="@+id/l4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixteen"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_below="@id/switchholder"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/l4"
            android:fontFamily="@font/netron"
            android:id="@+id/l5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirtytwo"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_below="@id/switchholder"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/l5"
            android:fontFamily="@font/netron"
            android:id="@+id/l6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixtyfour"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_below="@id/switchholder"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/l6"
            android:fontFamily="@font/netron"
            android:id="@+id/l7"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:textColor="#000000"
            android:textSize="15sp"
            android:layout_below="@id/switchholder"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="17dp"
            android:layout_toEndOf="@id/l7"
            android:fontFamily="@font/netron"
            android:id="@+id/l8"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrowdown"
            android:contentDescription="@string/arrowimg"
            android:layout_below="@id/l1"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:onClick="flip"
            android:id="@+id/arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow"
            android:textSize="25sp"
            android:layout_toEndOf="@id/arrow"
            android:layout_alignBottom="@id/arrow"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:hint="@string/autofill"
            android:background="@drawable/edittextbackground"
            android:textSize="20sp"
            android:inputType="number"
            android:id="@+id/decimal"
            android:layout_below="@id/arrow"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:enabled="false"
            android:layout_margin="15dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/decimal"
            android:layout_below="@id/arrow"
            android:id="@+id/group"
            android:layout_marginStart="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classa"
                android:textSize="25sp"
                android:checked="true"
                android:id="@+id/a"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classb"
                android:textSize="25sp"
                android:id="@+id/b"/>

        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="20sp"
            android:layout_below="@id/decimal"
            android:layout_margin="10dp"
            android:background="@color/back"
            android:onClick="back"/>


    </RelativeLayout>


</ScrollView>