<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/a8slow"
                android:layout_marginTop="50dp"
                android:id="@+id/a8sButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/a8s"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_marginTop="50dp"
                android:textColor="#ffffff"
                android:background="#66000000"
                android:id="@+id/a8sLabel"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/minimonitor"

                android:layout_below="@id/a8sButton"
                android:id="@+id/miniButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/mini"
                android:gravity="center"
                android:textSize="22sp"

                android:layout_below="@id/a8sButton"
                android:textColor="#ffffff"
                android:background="#66000000"
                android:id="@+id/miniLabel"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/din"
                android:layout_below="@id/miniButton"
                android:id="@+id/dinButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/din"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:background="#66000000"
                android:layout_below="@id/miniLabel"
                android:id="@+id/dinLabel"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ctrlio"
                android:layout_below="@id/dinButton"
                android:id="@+id/ctrlButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/ctrl"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:background="#66000000"
                android:layout_below="@id/dinLabel"
                android:id="@+id/ctrlLabel"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ctrlav"
                android:layout_below="@id/ctrlButton"
                android:id="@+id/ctrlavButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/ctrlav"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:background="#66000000"
                android:layout_below="@id/ctrlLabel"
                android:id="@+id/ctrlavLabel"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/monitormodlow"
                android:layout_below="@id/ctrlavButton"
                android:id="@+id/monitorButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/monitor"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:background="#66000000"
                android:layout_below="@id/ctrlavLabel"
                android:id="@+id/monitorLabel"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/smkdet"
                android:layout_below="@id/monitorButton"
                android:id="@+id/smkButton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:text="@string/smk"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:background="#66000000"
                android:layout_below="@id/monitorLabel"
                android:id="@+id/smkLabel"/>


        </RelativeLayout>
    </ScrollView>



</RelativeLayout>